added api to get pubsub triggers
