# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  handlers.CreateStoryRequest:
+  internal_handlers.CreateStoryRequest:
     properties:
       city:
         type: string
@@ -15,22 +15,44 @@ definitions:
           type: string
         type: array
     type: object
-  handlers.GoogleLoginRequest:
+  internal_handlers.GoogleLoginRequest:
     properties:
       access_token:
         type: string
     type: object
-  handlers.LogoutRequest:
+  internal_handlers.LogoutRequest:
     properties:
       refresh:
         type: string
     type: object
-  handlers.RefreshTokenRequest:
+  internal_handlers.PubSubMessage:
+    properties:
+      attributes:
+        additionalProperties:
+          type: string
+        description: optional
+        type: object
+      data:
+        description: base64-encoded
+        type: string
+      messageId:
+        type: string
+      publishTime:
+        type: string
+    type: object
+  internal_handlers.PubSubPushMessage:
+    properties:
+      message:
+        $ref: '#/definitions/internal_handlers.PubSubMessage'
+      subscription:
+        type: string
+    type: object
+  internal_handlers.RefreshTokenRequest:
     properties:
       refresh:
         type: string
     type: object
-  handlers.StoryData:
+  internal_handlers.StoryData:
     properties:
       audio:
         type: string
@@ -47,7 +69,7 @@ definitions:
       title:
         type: string
     type: object
-  handlers.StoryResponse:
+  internal_handlers.StoryResponse:
     properties:
       data: {}
       error:
@@ -55,7 +77,7 @@ definitions:
       message:
         type: string
     type: object
-  model.EmailRequest:
+  rio-go-model_internal_model.EmailRequest:
     properties:
       email:
         type: string
@@ -64,7 +86,7 @@ definitions:
       name:
         type: string
     type: object
-  model.StoryFeedback:
+  rio-go-model_internal_model.StoryFeedback:
     properties:
       email:
         type: string
@@ -73,14 +95,14 @@ definitions:
       storyId:
         type: string
     type: object
-  model.Tc:
+  rio-go-model_internal_model.Tc:
     properties:
       accepted:
         type: boolean
       email:
         type: string
     type: object
-  model.UserProfile:
+  rio-go-model_internal_model.UserProfile:
     properties:
       city:
         type: string
@@ -99,14 +121,14 @@ definitions:
       username:
         type: string
     type: object
-  util.HttpError:
+  rio-go-model_internal_util.HttpError:
     properties:
       message:
         type: string
       status:
         type: integer
     type: object
-  util.TokenPair:
+  rio-go-model_internal_util.TokenPair:
     properties:
       access:
         type: string
@@ -140,26 +162,26 @@ paths:
         name: google_login_request
         required: true
         schema:
-          $ref: '#/definitions/handlers.GoogleLoginRequest'
+          $ref: '#/definitions/internal_handlers.GoogleLoginRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/util.TokenPair'
+            $ref: '#/definitions/rio-go-model_internal_util.TokenPair'
         "400":
           description: Invalid request body or missing access_token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "401":
           description: Invalid Google token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       summary: Google Login
       tags:
       - Authentication
@@ -175,7 +197,7 @@ paths:
         name: logout_request
         required: true
         schema:
-          $ref: '#/definitions/handlers.LogoutRequest'
+          $ref: '#/definitions/internal_handlers.LogoutRequest'
       produces:
       - application/json
       responses:
@@ -188,11 +210,11 @@ paths:
         "400":
           description: Invalid request body or missing refresh token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       summary: User Logout
       tags:
       - Authentication
@@ -207,26 +229,26 @@ paths:
         name: refresh_token_request
         required: true
         schema:
-          $ref: '#/definitions/handlers.RefreshTokenRequest'
+          $ref: '#/definitions/internal_handlers.RefreshTokenRequest'
       produces:
       - application/json
       responses:
         "200":
           description: '{\"access\":\"new_access_token\", \"refresh\":\"original_refresh_token\"}'
           schema:
-            $ref: '#/definitions/util.TokenPair'
+            $ref: '#/definitions/rio-go-model_internal_util.TokenPair'
         "400":
           description: Invalid request body or missing refresh token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "401":
           description: Invalid refresh token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Failed to generate new access token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       summary: Refresh Access Token
       tags:
       - Authentication
@@ -242,7 +264,7 @@ paths:
         name: logout_request
         required: true
         schema:
-          $ref: '#/definitions/handlers.LogoutRequest'
+          $ref: '#/definitions/internal_handlers.LogoutRequest'
       produces:
       - application/json
       responses:
@@ -255,11 +277,11 @@ paths:
         "400":
           description: Invalid request body or missing refresh token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       summary: User Logout
       tags:
       - Authentication
@@ -274,26 +296,26 @@ paths:
         name: refresh_token_request
         required: true
         schema:
-          $ref: '#/definitions/handlers.RefreshTokenRequest'
+          $ref: '#/definitions/internal_handlers.RefreshTokenRequest'
       produces:
       - application/json
       responses:
         "200":
           description: '{\"access\":\"new_access_token\", \"refresh\":\"original_refresh_token\"}'
           schema:
-            $ref: '#/definitions/util.TokenPair'
+            $ref: '#/definitions/rio-go-model_internal_util.TokenPair'
         "400":
           description: Invalid request body or missing refresh token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "401":
           description: Invalid refresh token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Failed to generate new access token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       summary: Refresh Access Token
       tags:
       - Authentication
@@ -308,7 +330,7 @@ paths:
         name: emailRequest
         required: true
         schema:
-          $ref: '#/definitions/model.EmailRequest'
+          $ref: '#/definitions/rio-go-model_internal_model.EmailRequest'
       responses:
         "200":
           description: Email sent successfully
@@ -352,16 +374,16 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/handlers.StoryData'
+              $ref: '#/definitions/internal_handlers.StoryData'
             type: array
         "401":
           description: Invalid or missing authorization token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       summary: List Generated Stories
       tags:
       - Stories
@@ -376,26 +398,26 @@ paths:
         name: story
         required: true
         schema:
-          $ref: '#/definitions/handlers.CreateStoryRequest'
+          $ref: '#/definitions/internal_handlers.CreateStoryRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Story created successfully
           schema:
-            $ref: '#/definitions/handlers.StoryResponse'
+            $ref: '#/definitions/internal_handlers.StoryResponse'
         "400":
           description: Invalid request body
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "401":
           description: Invalid or missing authorization token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       security:
       - BearerAuth: []
       summary: Create a new story
@@ -412,7 +434,7 @@ paths:
         name: storyFeedback
         required: true
         schema:
-          $ref: '#/definitions/model.StoryFeedback'
+          $ref: '#/definitions/rio-go-model_internal_model.StoryFeedback'
       produces:
       - application/json
       responses:
@@ -425,11 +447,11 @@ paths:
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       security:
       - BearerAuth: []
       summary: Create story feedback
@@ -446,7 +468,7 @@ paths:
         name: tc
         required: true
         schema:
-          $ref: '#/definitions/model.Tc'
+          $ref: '#/definitions/rio-go-model_internal_model.Tc'
       produces:
       - application/json
       responses:
@@ -459,16 +481,46 @@ paths:
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       security:
       - BearerAuth: []
       summary: Create TC
       tags:
       - tc
+  /triggers/pubsub:
+    post:
+      consumes:
+      - application/json
+      description: Receives GCP Pub/Sub push messages and acknowledges with 200
+      parameters:
+      - description: PubSub Push Message
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_handlers.PubSubPushMessage'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: PubSub Push Handler
+      tags:
+      - Triggers
   /user-profile:
     delete:
       consumes:
@@ -486,11 +538,11 @@ paths:
         "401":
           description: Invalid or missing authorization token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       security:
       - BearerAuth: []
       summary: Delete User Profile
@@ -512,11 +564,11 @@ paths:
         "401":
           description: Invalid or missing authorization token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       security:
       - BearerAuth: []
       summary: Get User Profile
@@ -532,7 +584,7 @@ paths:
         name: userProfile
         required: true
         schema:
-          $ref: '#/definitions/model.UserProfile'
+          $ref: '#/definitions/rio-go-model_internal_model.UserProfile'
       produces:
       - application/json
       responses:
@@ -545,11 +597,11 @@ paths:
         "401":
           description: Invalid or missing authorization token
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/util.HttpError'
+            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
       security:
       - BearerAuth: []
       summary: Update User Profile
